--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
   <script>
     // Enlaces por defecto (algunos fijos)
     let links = JSON.parse(localStorage.getItem('links')) || [
-      {text: "Guarda/Visualiza Información", url: "https://www.dropbox.com/scl/fo/ptimqllx77uh8u3jqzfw5/AAniGog1LRrf1Ra2By-sr_A?rlkey=sbuki9xnvge548taoavudqul3&st=8tmdy7d2&dl=0", fixed: true},
+      {text: "Guarda/Visualiza Información", url: "https://www.dropbox.com/scl/fo/lkdz6asaatdbtsj5tmmtr/AANfqRLAtaeuR_p_VFgJTaE?rlkey=tjd0xvex4yd88mqaqgs1egrd3&st=4yi1cpyz&dl=0", fixed: true},
       {text: "Aprende a Usar tu EPP Correctamente", url: "https://esys.cl/cursos-y-capacitaciones/", fixed: true},
       {text: "Calculadora Rápida de Arco Eléctrico", url: "https://esysingenieria.github.io/Calculadora-de-Arco-Electrico/", fixed: true}
     ];
@@ -396,4 +396,5 @@
   </script>
 </body>
 </html>
+
 
